Install node dependencies using npm

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {},
   "devDependencies": {
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": "^1.12.0",
+    "handlebars": "^1.3.0"
   },
   "scripts": {},
   "repository": {
