--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "main": "",
   "dependencies": {},
   "devDependencies": {
+    "handlebars": "^1.3.0",
+    "jQuery": "^1.7.4",
+    "jsdom": "~0.5.7",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0",
-    "handlebars": "^1.3.0"
+    "xmlhttprequest": "~1.5.0",
+    "nwmatcher": "~1.3.6",
+    "htmlparser2": "~3.8.3",
+    "cssstyle": "~0.2.29"
   },
   "scripts": {},
   "repository": {
